creating api and protecting  api end point
