# app/serializers/user_serializer.rb
@@ -1,0 +1,3 @@
+class UserSerializer < ActiveModel::Serializer
+  attributes :id, :created_at, :updated_at, :username, :firstname, :lastname, :email
+end
